dev_frontend.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ui
  namespace: myNS
  labels:
    app: ui
    env: dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  serviceName: "ui"
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: "krishna"
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
      - name: regcred
      containers:
      - name: ui
        image: "registry:5000/q_ui$CI_PIPELINE_ID"
        imagePullPolicy: "IfNotPresent"
        securityContext:
          privileged: true
        ports:
        - name: queue-ui
          containerPort: 8082
        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
        volumeMounts:
        - name: ui
          mountPath: /data
      volumes:
      - name: ui
        persistentVolumeClaim:
          claimName: ui
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: env
                operator: In
                values:
                - development
  # volumeClaimTemplates:
# - metadata:
#     name: ui
#   spec:
#     accessModes:
#     - ReadWriteOnce
#     storageClassName: local-path
#     resources:
#       requests:
#         storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: myNS
  labels:
    app: ui
    env: dev
spec:
  selector:
    app: ui
  type: ClusterIP # ClusterIP, NodePort
  ports:
  - name: queue-ui-service-port
    protocol: TCP
    port: 8082
    targetPort: queue-ui
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: ui
#   namespace: myNS
#   labels:
#     app: ui
#     env: dev
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: StatefulSet
#     name: ui
#   minReplicas: 1
#   maxReplicas: 10
#   targetCPUUtilizationPercentage: 50
