dev_pgadmin_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-pgadmin
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: dev_frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["development"]
    - podSelector:
        matchLabels:
          app: dev_postgres
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["development"]
    - podSelector:
        matchLabels:
          app: dev_postgres
    ports:
    - protocol: TCP
      port: 5432
